<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.agoncal.training.javaee6</groupId>
    <artifactId>parent</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>
    <name>00 - Parent of Java EE 6 Training</name>

    <modules>
        <module>02-JPA</module>
        <module>03-JPA</module>
        <module>04-JPA</module>
        <module>05-JPA</module>
        <module>06-JPA</module>
        <module>07-JPA</module>
        <module>08-JPA</module>
        <module>09-EJB</module>
        <module>10-EJB</module>
        <module>11-EJB</module>
        <module>12-EJB</module>
        <module>13-CDI</module>
        <module>14-BeanValidation</module>
        <module>15-JSF</module>
        <module>16-JSF</module>
        <module>17-JAXRS</module>
    </modules>

    <properties>
        <version.junit>4.11</version.junit>
        <version.glassfish>3.1.2.2</version.glassfish>
        <version.maven.embedded.glassfish.plugin>3.1.1</version.maven.embedded.glassfish.plugin>
        <version.maven.war.plugin>2.2</version.maven.war.plugin>
        <version.maven.compiler.plugin>2.5.1</version.maven.compiler.plugin>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!--This has most of the needed dependencies : Derby, JPA, EJB, Java EE 6...-->
        <dependency>
            <groupId>org.glassfish.main.extras</groupId>
            <artifactId>glassfish-embedded-all</artifactId>
            <version>${version.glassfish}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>test</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven.compiler.plugin}</version>
                <inherited>true</inherited>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${version.maven.war.plugin}</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
                </plugin>
                <!-- Run : mvn clean package embedded-glassfish:run -->
                <!-- if you want to skip test : mvn -Dmaven.test.skip=true clean package embedded-glassfish:run -->
                <!--     consider increasing PermGen : export MAVEN_OPTS=-XX:MaxPermSize=128m  -->
                <!-- and go to http://localhost:8080/cdbookstore/ -->
                <plugin>
                    <groupId>org.glassfish</groupId>
                    <artifactId>maven-embedded-glassfish-plugin</artifactId>
                    <version>${version.maven.embedded.glassfish.plugin}</version>
                    <configuration>
                        <app>${project.build.directory}/${project.build.finalName}.war</app>
                        <port>8080</port>
                        <contextRoot>${project.build.finalName}</contextRoot>
                        <name>${project.build.finalName}</name>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>jboss-public-repository-group</id>
            <name>JBoss Public Maven Repository Group</name>
            <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>java.net-public-repository-group</id>
            <name>Java.Net Public Maven Repository Group</name>
            <url>https://maven.java.net/content/groups/public</url>
        </repository>
        <repository>
            <id>java.net-staging-repository-group</id>
            <name>Java.Net Staging Maven Repository Group</name>
            <url>https://maven.java.net/content/groups/staging</url>
        </repository>
        <repository>
            <id>java.net-releases-repository-group</id>
            <name>Java.Net Releases Maven Repository Group</name>
            <url>https://maven.java.net/content/repositories/releases</url>
        </repository>
        <repository>
            <id>java.net-snapshots-repository-group</id>
            <name>Java.Net Snapshots Maven Repository Group</name>
            <url>https://maven.java.net/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>prime-repo</id>
            <name>PrimeFaces Maven Repository</name>
            <url>http://repository.primefaces.org</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>maven2-repository.dev.java.net</id>
            <url>http://download.java.net/maven/2</url>
        </pluginRepository>
    </pluginRepositories>

</project>